--- a/introrasim.tex
+++ b/introrasim.tex
@@ -3,7 +3,7 @@
 
 %Ideas: Este capitulo se presenta un caso del uso del algoritmo detallado en el capitulo anterior. En este caso la posición del paciente se adapta en preproceso. Es decir antes de que comience la simulación. Aunque el procedimiento es supervisado, por lo que la selección de poses debe funcionar en tiempo-real una vez seleccionada la posé se pude aplicar la fase de optimización del algoritmo. Por el contrario en la herramienta de rayo X, la modificación de la pose es en tiempo real por lo que no se puede usar la etapa de optimización. PONLO BONITO}
 
-En este capítulo se presenta un caso de uso donde se ha integrado el algoritmo propuesto en el capítulo \ref{cap:posing}. El objetivo es adaptar la posición del paciente virtual en la \emph{suite} \ac{ITGVPH} (ver sec. \ref{intro:context}) que prepara los modelos con los que se trabaja\del{r} en el simulador \ac{RASim}. Este proceso debe ser automático exceptuando la selección de poses. El profesional médico deberá supervisar la deformación producida, debido a que no se dispone de descripciones completas o mecánicas del modelo anatómico. También, se permitirá al usuario \del{podrá} \new{poder} ejecutar la fase de optimización ya que, en este caso, la interactividad no es crítica. %En el siguiente capítulo, el segundo caso de uso primará la interactividad, por la cual esta etapa será omitida.
+En este capítulo se presenta un caso de uso donde se ha integrado el algoritmo propuesto en el capítulo \ref{cap:posing}. El objetivo es adaptar la posición del paciente virtual en la \emph{suite} \ac{ITGVPH} (ver sec. \ref{intro:context}) que prepara los modelos con los que se trabaja en el simulador \ac{RASim}. Este proceso debe ser automático exceptuando la selección de poses. El profesional médico deberá supervisar la deformación producida, debido a que no se dispone de descripciones completas o mecánicas del modelo anatómico. También, se permitirá al usuario poder ejecutar la fase de optimización ya que, en este caso, la interactividad no es crítica. %En el siguiente capítulo, el segundo caso de uso primará la interactividad, por la cual esta etapa será omitida.
 
 
 %El algoritmo propuesto en el capítulo anterior ha sido incorporado en la herramienta \ac{ITGVPH} (ver sección \ref{intro:context}) que se encargará de generar la base de datos necesaria para que los usuarios puedan entrenar con una variabilidad anatómica extensa. Esta herramienta será la encargada de crear los pacientes virtuales que se utilizarán en el simulador \ac{RASim}. Esto permite al usuario enfrentarse a diferentes tipos de situaciones y mejorar el entrenamiento del procedimiento. En este capítulo se mostrarán las contribuciones aportadas en la integración de esta herramienta dentro del proyecto \ac{RASimAs}.
